# e-Portfolio-Intelligent-Agents-July-2025-B

./: README.md  alice_client.py  bob_server.py
Agent Dialogues/: LICENSE  README.md  requirements.txt  warehouse.kif
Parse Trees/: README.md  constituency_parse_trees.md
aro_agent/: README.md
aro_agent/aro_agent_backend/: DEVELOPMENT.md  README.md  pyproject.toml  railway.json  requirements.txt
aro_agent/aro_agent_backend/aro_agent/: __init__.py  api.py  cli.py  config.py  models.py
aro_agent/aro_agent_backend/aro_agent/agents/: __init__.py  coordinator.py  discovery.py  extract.py  fetch.py  storage.py
aro_agent/aro_agent_backend/aro_agent/templates/: index.html
aro_agent/aro_agent_backend/aro_agent/templates/assets/: app.js  style.css
aro_agent/aro_agent_backend/aro_agent/tests/: __init__.py  test_api_endpoints.py  test_api_schedule_toggle.py  test_primary_id.py  test_send_email_mock.py  test_year_filter.py  test_zip_and_send_validation.py  test_zip_endpoint.py
aro_agent/aro_agent_backend/aro_agent/utils/: compress.py  email_format.py  email_gmail.py  http.py  logging.py  normalise.py
aro_agent/aro_agent_frontend/: README.md  railway.json  requirements.txt  wsgi.py
aro_agent/aro_agent_frontend/webapp/: app.py
aro_agent/aro_agent_frontend/webapp/static/: style.css
aro_agent/aro_agent_frontend/webapp/templates/: index.html  layout.html  results.html  schedule.html  schedule_missing.html
aro_agent/aro_agent_frontend/webapp/tests/: __init__.py  test_homepage_render.py  test_jobs_page_render.py  test_run_detail_render.py
